Error painting with Subdivision at end of stack #70163

Closed
opened 2019-09-22 17:25:44 +02:00 by SavMartin · 9 comments

System Information
Operating system: Linux-4.15.0-64-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 560 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.129

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-22 11:16, hash: 22a478e5ee
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
Error WeigthPaint.mp4

**System Information** Operating system: Linux-4.15.0-64-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 560 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.129 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-22 11:16, hash: `22a478e5ee` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] [Error WeigthPaint.mp4](https://archive.blender.org/developer/F7768849/Error_WeigthPaint.mp4)
Author

Added subscriber: @SavMartin

Added subscriber: @SavMartin

Added subscribers: @Jeroen-Bakker, @mano-wii

Added subscribers: @Jeroen-Bakker, @mano-wii
Jeroen Bakker was assigned by Germano Cavalcante 2019-09-24 17:59:33 +02:00

@SavMartin, could you provide a simple blend file for easy investigation?
@Jeroen-Bakker, you coordinate this area, right?

@SavMartin, could you provide a simple blend file for easy investigation? @Jeroen-Bakker, you coordinate this area, right?

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

@Sergey recently fixed an issue in this area: #67934

@Sergey recently fixed an issue in this area: #67934
Author

here you have a simple blend file.. as you can see till you desactive Subdivision
you can not paint ....
Weight_Paint_Error.blend

here you have a simple blend file.. as you can see till you desactive Subdivision you can not paint .... [Weight_Paint_Error.blend](https://archive.blender.org/developer/F7773701/Weight_Paint_Error.blend)
Author
[ErrorPaint.mp4](https://archive.blender.org/developer/F7775403/ErrorPaint.mp4)

This issue was referenced by 8a7085b9d4

This issue was referenced by 8a7085b9d45b5e364978672ac50cff4e7ee9e269

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70163
No description provided.